--- a/src/assets/styles/Display/Reusable/user.less
+++ b/src/assets/styles/Display/Reusable/user.less
@@ -1,6 +1,6 @@
 .user {
-  min-height: 100vh;
-  padding: 50px 0 0 0;
+  height: 100vh;
+  padding: 5rem 50px;
 
   .header {
     display: flex;
@@ -26,6 +26,14 @@
       display: flex;
       flex-direction: column;
       align-items: flex-start;
+      position: relative;
+
+      .unicon {
+        position: absolute;
+        right: 0;
+        transform: translateX(120%);
+        fill: #aaaaaa;
+      }
 
       p {
         margin: 5px 0;
@@ -48,6 +56,7 @@
       display: flex;
       form {
         .input-box {
+          position: relative;
           font-size: 20px;
           margin: 30px 0;
           display: flex;
@@ -70,6 +79,12 @@
             &.input-toggle {
               border-bottom: 1px solid black;
             }
+          }
+
+          .unicon {
+            position: absolute;
+            right: 0;
+            fill: #6d6d6d;
           }
         }
       }
