--- a/src/assets/styles/Display/Message/message.less
+++ b/src/assets/styles/Display/Message/message.less
@@ -2,6 +2,8 @@
 
 .message {
   padding: 1.5rem 50px;
+  position: relative;
+  // overflow: auto;
 
   .title {
     font-size: 2.5rem;
@@ -27,8 +29,7 @@
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
-    box-sizing: border-box;
-    // overflow-y: scroll;
+    // box-sizing: border-box;
 
     .message-add {
       display: flex;
@@ -40,70 +41,201 @@
       border-radius: 5px;
       padding: 5px;
       cursor: pointer;
-    }
+      color: @primary-text-color-light;
 
-    .message-box {
-      background-color: @background-color-light;
-      padding: 1rem;
-      border-radius: 10px;
-      display: flex;
-      overflow-x: hidden;
-      position: relative;
-
-      .message-main {
-        display: flex;
-        flex-direction: column;
-        flex-grow: 2;
-
-        .message-title {
-          justify-self: flex-start;
-          font-weight: 700;
-          margin-bottom: 10px;
-        }
-
-        .message-content {
-          min-width: 100%;
-          width: 0;
-          word-wrap: break-word;
-          margin-bottom: 20px;
-        }
-
-        .message-time {
-          justify-self: flex-end;
-          color: @primary-text-color-light;
-        }
-      }
-      .message-buttons {
-        right: 0;
-        top: 0;
-        position: absolute;
-        height: 100%;
-        background-color: red;
-        transform: translateX(100%);
+      .unicon {
         display: flex;
         justify-content: center;
         align-items: center;
-        transition: all 0.3s ease;
-
-        button {
-          border: none;
-          width: 50px;
-          height: 100%;
-          background-color: #fc4445;
-          cursor: pointer;
-
-          .unicon {
-            fill: #f8f9fa;
-          }
-
-          &.edit-button {
-            background-color: #007bff;
-          }
-        }
+        fill: @primary-text-color-light;
       }
 
-      &:hover > .message-buttons {
-        transform: translateX(0);
+      &:hover {
+        border-color: @primary-text-color-light-hover;
+        color: @primary-text-color-light-hover;
+
+        .unicon {
+          fill: @primary-text-color-light-hover;
+        }
+      }
+    }
+
+    .message-box-view {
+      height: 80vh;
+      overflow: auto;
+
+      .message-box {
+        background-color: @background-color-light;
+        padding: 1rem;
+        border-radius: 10px;
+        display: flex;
+        overflow-x: hidden;
+        position: relative;
+        margin-bottom: 1.5rem;
+
+        .message-main {
+          display: flex;
+          flex-direction: column;
+          flex-grow: 2;
+          min-height: 93px;
+
+          .message-title {
+            justify-self: flex-start;
+            font-weight: 700;
+            margin-bottom: 10px;
+            min-height: 21px;
+          }
+
+          .message-content {
+            min-height: 21px;
+            min-width: 100%;
+            width: 0;
+            word-wrap: break-word;
+            margin-bottom: 20px;
+          }
+
+          .message-time {
+            justify-self: flex-end;
+            color: @primary-text-color-light;
+            display: flex;
+            flex-direction: column;
+            font-size: 0.75rem;
+            // min-height: 36px;
+          }
+        }
+        .message-buttons {
+          right: 0;
+          top: 0;
+          position: absolute;
+          height: 100%;
+          background-color: red;
+          transform: translateX(100%);
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          transition: all 0.3s ease;
+
+          button {
+            border: none;
+            width: 50px;
+            height: 100%;
+            background-color: #fc4445;
+            cursor: pointer;
+
+            .unicon {
+              fill: #f8f9fa;
+            }
+
+            &.edit-button {
+              background-color: #007bff;
+            }
+          }
+        }
+
+        &:hover > .message-buttons {
+          transform: translateX(0);
+        }
+      }
+    }
+  }
+
+  .message-popup {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: none;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.3s ease;
+
+    .message-add-box {
+      width: 600px;
+      height: 800px;
+      background-color: @background-color-light;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 50px;
+      border-radius: 10px;
+      z-index: 2;
+
+      form {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 70px;
+        padding: 0 10%;
+        flex-grow: 1;
+
+        .message-add-box-header {
+          font-size: 3rem;
+          color: @primary-text-color-light;
+        }
+
+        .message-add-box-body {
+          display: flex;
+          flex-direction: column;
+          gap: 20px;
+          width: 100%;
+          flex-grow: 1;
+
+          .message-add-box-body-item {
+            display: flex;
+            flex-direction: column;
+            gap: 5px;
+            width: 100%;
+
+            label {
+              font-weight: 400;
+              font-size: 1.5rem;
+            }
+            input,
+            textarea {
+              font-size: 1.25rem;
+              padding: 5px;
+              border: 1px solid @primary-text-color-light;
+              border-radius: 8px;
+              outline: none;
+
+              &:focus {
+                border-color: @primary-text-color-light-hover;
+              }
+            }
+
+            textarea {
+              min-height: 200px;
+              max-height: 270px;
+            }
+          }
+        }
+
+        .message-add-box-buttons {
+          display: flex;
+          width: 100%;
+          justify-content: space-around;
+          padding: 0 10%;
+          justify-self: flex-end;
+
+          button {
+            border: 1px solid @primary-text-color-light-hover;
+            background-color: transparent;
+            font-size: 1.5rem;
+            width: 135px;
+            height: 55px;
+            border-radius: 5px;
+            cursor: pointer;
+            color: @primary-text-color-light-hover;
+
+            &:hover {
+              background-color: @primary-text-color-light-hover;
+              color: @background-color-light;
+            }
+          }
+        }
       }
     }
   }
