--- a/src/assets/variables.less
+++ b/src/assets/variables.less
@@ -1,9 +1,11 @@
 @background-color-light: #f6f6f9;
 @primary-text-color-light: #7d8da1;
 @primary-text-color-light-hover: #7380ec;
+@disable-color: #caced8;
 @error-color: #dc3545;
 @success-color: #2fc252;
 @link-color: #2c3e50;
+@border-color: #caced8;
 
 * {
   margin: 0;
