--- a/src/assets/styles/Display/Reusable/user.less
+++ b/src/assets/styles/Display/Reusable/user.less
@@ -1,3 +1,4 @@
+@import "~@/assets/variables.less";
 .user {
   height: 100vh;
   padding: 5rem 50px;
@@ -12,6 +13,25 @@
       border-radius: 100rem;
       height: inherit;
       aspect-ratio: 1/1;
+      position: relative;
+
+      .change-icon {
+        width: 45px;
+        aspect-ratio: 1/1;
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        // background-color: @background-color-light;
+        border-radius: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        .unicon {
+          width: 30px;
+          height: 30px;
+          fill: @primary-text-color-light-hover;
+        }
+      }
 
       img {
         width: 150px;
@@ -31,7 +51,8 @@
       .unicon {
         position: absolute;
         right: 0;
-        transform: translateX(120%);
+        top: 0;
+        transform: translate(120%, 15%);
         fill: #aaaaaa;
       }
 
@@ -54,40 +75,192 @@
 
     .body-info-box {
       display: flex;
-      form {
-        .input-box {
-          position: relative;
-          font-size: 20px;
-          margin: 30px 0;
-          display: flex;
-          justify-content: space-between;
-          cursor: auto;
+      justify-content: space-between;
 
-          label {
-            font-weight: 700;
-            flex-grow: 1;
-            text-align: end;
-            cursor: auto;
-          }
-          input {
-            margin-left: 10px;
-            font-size: 20px;
-            border: none;
-            outline: none;
-            cursor: auto;
+      .reuse {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+      }
 
-            &.input-toggle {
-              border-bottom: 1px solid black;
+      .profile-box {
+        width: 47%;
+        .profile-box-header {
+          color: @disable-color;
+        }
+        .profile-box-form {
+          form {
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+
+            .input-box-name {
+              display: flex;
+              justify-content: space-between;
+
+              .input-box-name-item {
+                display: flex;
+                flex-direction: column;
+                gap: 5px;
+                width: 47%;
+
+                label {
+                  font-weight: bold;
+                }
+
+                input {
+                  font-size: 1rem;
+                  padding: 5px 12px;
+                  border-radius: 8px;
+                  border: 1px solid @disable-color;
+                  color: @primary-text-color-light;
+                  outline: none;
+
+                  &:focus {
+                    border: 1px solid @primary-text-color-light-hover;
+                  }
+                }
+              }
             }
-          }
+            .input-box-salary {
+              display: flex;
+              justify-content: space-between;
+              .input-box-salary-item {
+                display: flex;
+                flex-direction: column;
+                width: 47%;
+                .input-box-salary-header {
+                  font-weight: bold;
+                }
+                .input-box {
+                  width: 100%;
+                  input,
+                  select {
+                    width: 100%;
+                    font-size: 1rem;
+                    padding: 5px 12px;
+                    border-radius: 8px;
+                    border: 1px solid @disable-color;
+                    color: @primary-text-color-light;
+                    outline: none;
 
-          .unicon {
-            position: absolute;
-            right: 0;
-            fill: #6d6d6d;
+                    &:focus {
+                      border: 1px solid @primary-text-color-light-hover;
+                    }
+                  }
+                  select {
+                    padding: 8.5px 12px;
+                    background-color: transparent;
+                    position: relative;
+                    * {
+                      background-color: transparent;
+                      position: absolute;
+                      bottom: -100px;
+                      left: 0;
+                    }
+                  }
+                }
+              }
+            }
+
+            .input-box-gender {
+              display: flex;
+              flex-direction: column;
+              gap: 5px;
+
+              .radio-box {
+                display: flex;
+                gap: 10px;
+
+                .radio-box-item {
+                  display: flex;
+                  gap: 5px;
+
+                  input {
+                    accent-color: @primary-text-color-light-hover;
+                  }
+                }
+              }
+            }
+
+            .input-box-date {
+              display: flex;
+              flex-direction: column;
+              gap: 10px;
+            }
           }
         }
       }
+      .contact-box {
+        width: 47%;
+        .contact-box-header {
+          color: @disable-color;
+        }
+
+        .contact-box-form {
+          form {
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+
+            .contact-box-name-item {
+              display: flex;
+              flex-direction: column;
+
+              label {
+                font-weight: bold;
+              }
+
+              input {
+                font-size: 1rem;
+                padding: 5px 12px;
+                border-radius: 8px;
+                border: 1px solid @disable-color;
+                color: @primary-text-color-light;
+                outline: none;
+
+                &:focus {
+                  border: 1px solid @primary-text-color-light-hover;
+                }
+              }
+            }
+          }
+        }
+      }
+
+      // form {
+      //   .input-box {
+      //     position: relative;
+      //     font-size: 20px;
+      //     margin: 30px 0;
+      //     display: flex;
+      //     justify-content: space-between;
+      //     cursor: auto;
+
+      //     label {
+      //       font-weight: 700;
+      //       flex-grow: 1;
+      //       text-align: end;
+      //       cursor: auto;
+      //     }
+      //     input {
+      //       margin-left: 10px;
+      //       font-size: 20px;
+      //       outline: none;
+      //       cursor: auto;
+
+      //       &.input-toggle {
+      //         border-bottom: 1px solid black;
+      //       }
+      //     }
+
+      //     .unicon {
+      //       position: absolute;
+      //       right: 0;
+      //       fill: #6d6d6d;
+      //     }
+      //   }
+      // }
     }
   }
 }
