--- a/src/assets/styles/Sidebar/sidebar.less
+++ b/src/assets/styles/Sidebar/sidebar.less
@@ -34,6 +34,7 @@
 
     .user-name-tag {
       transition: all 0.3s ease;
+      font-size: 1.25rem;
       cursor: default;
     }
     #menu-button {
