--- a/src/assets/styles/Display/Receipt/receipt.less
+++ b/src/assets/styles/Display/Receipt/receipt.less
@@ -46,6 +46,7 @@
       cursor: pointer;
       color: @primary-text-color-light;
       margin-bottom: 2rem;
+      transition: all 0.3s ease;
 
       .unicon {
         display: flex;
@@ -55,11 +56,11 @@
       }
 
       &:hover {
-        border-color: @primary-text-color-light-hover;
-        color: @primary-text-color-light-hover;
+        background-color: @primary-text-color-light-hover;
+        color: @background-color-light;
 
         .unicon {
-          fill: @primary-text-color-light-hover;
+          fill: @background-color-light;
         }
       }
     }
@@ -115,7 +116,7 @@
             display: flex;
             flex-direction: column;
             gap: 5px;
-            width: 230px;
+            width: 14rem;
             // height: 50px;
             span {
               font-weight: bold;
