--- a/src/assets/styles/Display/Storage/storage.less
+++ b/src/assets/styles/Display/Storage/storage.less
@@ -8,7 +8,7 @@
 .storage {
   position: relative;
   padding: 1.25rem 50px;
-
+  box-sizing: border-box;
   .storage-header {
     padding: 0.5rem 0;
     position: relative;
@@ -30,6 +30,7 @@
   }
 
   .storage-display {
+    max-width: 100%;
     .toolbox {
       padding: 1rem 0;
       display: flex;
@@ -111,6 +112,7 @@
 
     .main {
       height: 80vh;
+
       overflow-y: auto;
       box-sizing: border-box;
 
@@ -118,14 +120,15 @@
         // display: flex;
         // flex-wrap: wrap;
         // justify-content: space-between;
-        // gap: 2rem;
         display: grid;
         grid-template-columns: repeat(5, 1fr);
-        gap: 2rem;
+        // gap: 2rem;
 
         .wrapper {
           box-sizing: border-box;
           overflow: hidden;
+          max-width: 250px;
+
           // border-radius: 8px;
 
           .commodity-card {
@@ -133,7 +136,6 @@
             flex-direction: column;
             justify-content: space-between;
             align-items: center;
-            //   max-width: 250px;
             height: 350px;
             border: 1px solid @background-color-light;
             // border-radius: 8px;
@@ -150,6 +152,12 @@
 
               .card-button {
                 transform: translateY(0);
+              }
+
+              .card-image {
+                img {
+                  transform: scale(1.2);
+                }
               }
             }
 
@@ -173,11 +181,14 @@
             .card-image {
               width: 200px;
               height: 200px;
+              box-sizing: border-box;
+              overflow: hidden;
 
               img {
                 object-fit: cover;
                 width: 100%;
                 height: 100%;
+                transition: all 0.3s ease;
               }
             }
 
