--- a/src/assets/styles/Login/signin.less
+++ b/src/assets/styles/Login/signin.less
@@ -150,3 +150,9 @@ input:-webkit-autofill {
     margin-bottom: 15px;
   }
 }
+
+@media screen and (min-width: 1801px) {
+  .signIn-container {
+    width: 20%;
+  }
+}
