--- a/src/assets/styles/Display/Receipt/receipt.less
+++ b/src/assets/styles/Display/Receipt/receipt.less
@@ -83,6 +83,7 @@
           border-radius: 5px;
           color: @primary-text-color-light;
           padding: 5px 1rem;
+          cursor: pointer;
 
           .receipt-title {
             span {
@@ -164,6 +165,7 @@
     box-sizing: border-box;
     overflow: hidden;
     position: absolute;
+    z-index: 100;
     background-color: #ffffff;
     left: 0;
     bottom: 0;
@@ -377,5 +379,14 @@
       height: 100%;
       background-color: @primary-text-color-light-hover;
     }
+  }
+
+  .single-receipt-display {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.2);
   }
 }
