--- a/src/assets/styles/Login/signup.less
+++ b/src/assets/styles/Login/signup.less
@@ -16,7 +16,7 @@
 }
 
 .signUp-container {
-  width: 20vw;
+  width: 25%;
   height: 60vh;
   background-color: rgba(0, 0, 0, 0.75);
   padding: 4em;
@@ -80,6 +80,11 @@
         }
       }
     }
+  }
+}
+@media screen and (min-width: 1801px) {
+  .signUp-container {
+    width: 20%;
   }
 }
 
