--- a/src/assets/styles/Display/HomePage/home.less
+++ b/src/assets/styles/Display/HomePage/home.less
@@ -7,6 +7,7 @@
 
 .home {
   box-sizing: border-box;
+  position: relative;
 
   .home-container {
     padding: 1.5rem 50px;
@@ -39,9 +40,10 @@
     .search-form {
       display: flex;
       align-items: center;
-      justify-content: space-between;
+      gap: 10px;
 
       form {
+        margin-left: auto;
         input {
           font-size: 16px;
           height: 30px;
@@ -70,6 +72,16 @@
         }
       }
     }
+  }
+
+  .add-view {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    transform: translateX(100%);
+    background-color: #ffffff;
+    transition: all 0.5s ease;
   }
 }
 
