--- a/src/assets/styles/Display/Storage/storage.less
+++ b/src/assets/styles/Display/Storage/storage.less
@@ -19,7 +19,7 @@
       bottom: 0;
       width: 100%;
       height: 1px;
-      background-color: @primary-text-color-light;
+      background-color: #c3d1e3;
     }
 
     h1 {
@@ -122,12 +122,12 @@
         // justify-content: space-between;
         display: grid;
         grid-template-columns: repeat(5, 1fr);
-        // gap: 2rem;
+        // width: 1111px;
 
         .wrapper {
           box-sizing: border-box;
           overflow: hidden;
-          max-width: 250px;
+          max-width: 95%;
 
           // border-radius: 8px;
 
@@ -381,4 +381,18 @@
 
 .show {
   transform: none;
+}
+
+@media screen and (min-width: 1550px) {
+  .storage {
+    .storage-display {
+      .main {
+        .commodity-container {
+          .wrapper {
+            max-width: 250px;
+          }
+        }
+      }
+    }
+  }
 }
