--- a/src/assets/styles/Login/signup.less
+++ b/src/assets/styles/Login/signup.less
@@ -13,6 +13,7 @@
   background-image: url("./background.jpg");
   background-size: cover;
   background-repeat: no-repeat;
+  position: relative;
 
   .confirm-token {
     position: absolute;
