done reset password

--- a/src/assets/styles/Display/Reusable/user.less
+++ b/src/assets/styles/Display/Reusable/user.less
@@ -129,6 +129,8 @@
                 display: flex;
                 flex-direction: column;
                 width: 47%;
+                gap: 5px;
+
                 .input-box-salary-header {
                   font-weight: bold;
                 }
@@ -206,6 +208,7 @@
             .contact-box-name-item {
               display: flex;
               flex-direction: column;
+              gap: 5px;
 
               label {
                 font-weight: bold;
