--- a/src/assets/styles/Display/Receipt/singleReceipt.less
+++ b/src/assets/styles/Display/Receipt/singleReceipt.less
@@ -132,6 +132,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      gap: 20px;
       button {
         width: 150px;
         height: 50px;
