done revenue chart

--- a/src/assets/styles/Display/Storage/storage.less
+++ b/src/assets/styles/Display/Storage/storage.less
@@ -360,6 +360,8 @@
     }
 
     .adding-button {
+      display: flex;
+      gap: 20px;
       button {
         border: 1px solid @primary-text-color-light-hover;
         border-radius: 5px;
