--- a/src/assets/styles/Display/Receipt/receipt.less
+++ b/src/assets/styles/Display/Receipt/receipt.less
@@ -67,11 +67,11 @@
 
     .receipt-content {
       display: flex;
-      justify-content: space-between;
+      gap: 20px;
       .receipt-box-view {
         height: 80vh;
         overflow: auto;
-        width: 49%;
+        width: 35%;
 
         .receipt-box {
           display: flex;
@@ -105,13 +105,14 @@
       }
 
       .receipt-box-board {
-        width: 49%;
         display: flex;
         flex-direction: column;
+        width: calc(100% - 35% - 2px);
+        gap: 20px;
 
         .search-box {
           display: flex;
-          justify-content: space-between;
+          gap: 20px;
 
           .input-box {
             display: flex;
@@ -140,9 +141,30 @@
               height: 36px;
             }
           }
+          .button-box {
+            margin-top: auto;
+            padding: 5px 0;
+            button {
+              border: 1px solid @primary-text-color-light-hover;
+              color: @primary-text-color-light-hover;
+              background-color: transparent;
+              border-radius: 5px;
+              padding: 4px 2rem;
+              cursor: pointer;
+              transition: all 0.3s ease;
+
+              &:hover {
+                background-color: @primary-text-color-light-hover;
+                color: @background-color-light;
+              }
+            }
+          }
         }
 
         .display-box {
+          display: flex;
+          flex-direction: column;
+          gap: 20px;
           table {
             border-collapse: collapse;
             width: 100%;
@@ -152,6 +174,23 @@
 
             th {
               padding: 5px 20px;
+            }
+          }
+
+          .final-info {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-end;
+
+            span {
+              font-size: 1.5rem;
+              color: @primary-text-color-light-hover;
+            }
+            #red {
+              color: @error-color;
+            }
+            #green {
+              color: @success-color;
             }
           }
         }
@@ -388,5 +427,6 @@
     width: 100%;
     height: 100vh;
     background-color: rgba(0, 0, 0, 0.2);
+    z-index: 100;
   }
 }
